[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poison-fl"
version = "0.1.0"
description = "Poisoning data generation for Federated Learning based on Al Dalaien et al. (Array 28, 2025)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "kaya"},
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7", "seaborn>=0.12"]

[project.scripts]
poison-fl = "poison_fl.cli:main"

[tool.setuptools.packages.find]
include = ["poison_fl*"]
